kubernetes/kubernetes-dashboard/dashboard-service.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-non-tls
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kubernetes.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
    middlewares:
    - name: http-redirect-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-tls
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kubernetes.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
  tls: {}
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-to-https
  namespace: kubernetes-dashboard
spec:
  redirectScheme:
    scheme: https


---
# (used for consul)
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetesdashboardingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: kubernetes.bas
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443 
  tls:
  - hosts:
    - kubernetes.bas


---
apiVersion: v1
kind: Service
metadata:
  name: kubernetesdashboardingress-lb-service
  namespace: kubernetes-dashboard
spec:
  ports:
  - name: https
    port: 443
    targetPort: 443
  selector:
    k8s-app: kubernetes-dashboard
  type: LoadBalancer
  loadBalancerIP: 192.168.6.65
