kubernetes/kubernetes-dashboard/dashboard-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ports:
  - name: https
    targetPort: 8443
    port: 443
  - name: http
    targetPort: 9090
    port: 80
  selector:
    k8s-app: kubernetes-dashboard
  type: ClusterIP

---
# (used for consul)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: kubernetes.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-non-tls
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kubernetes.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
    middlewares:
    - name: http-redirect-to-https
      namespace: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-tls
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kubernetes.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
  tls:
    secretName: kubernetes-bas-tls
# Uses cert-kubernetes-dashboard.yml
