kubernetes/kubernetes-dashboard/kubernetes-dashboard-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-kong-proxy-http
  namespace: kubernetes-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kong
  ports:
  - name: http
    port: 80
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-https
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "kubernetes-dashboard-sablier-kubernetes-dashboard@kubernetescrd"
spec:
  ingressClassName: lan
  tls:
  - secretName: kubernetes-bas-tls
    hosts:
    - kubernetes.bas
    - www.kubernetes.bas
  rules:
  - host: kubernetes.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # name: oauth2-proxy
            name: kubernetes-dashboard-kong-proxy-http
            port:
              number: 80
#       # - path: /oauth2
#       #   pathType: Prefix
#       #   backend:
#       #     service:
#       #       name: oauth2-proxy
#       #       port:
#       #         number: 80
